k8s/base/keydb.yaml
apiVersion: v1
kind: Service
metadata:
  name: keydb
spec:
  clusterIP: None
  ports:
    - name: redis
      port: 6379
      targetPort: redis
  selector:
    app.kubernetes.io/name: keydb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keydb
spec:
  serviceName: keydb
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: keydb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keydb
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: keydb
          image: eqalpha/keydb@sha256:6537505c42355ca1f571276bddf83f5b750f760f07b2a185a676481791e388ac
          args:
            - keydb-server
            - --appendonly
            - "yes"
            - --protected-mode
            - "no"
          ports:
            - name: redis
              containerPort: 6379
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            exec:
              command:
                - keydb-cli
                - ping
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            exec:
              command:
                - keydb-cli
                - ping
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 3
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: standard-rwo
        resources:
          requests:
            storage: 5Gi
