k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heyform
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: heyform-dev-ip
spec:
  defaultBackend:
    service:
      name: heyform
      port:
        number: 80
  rules:
    - host: heyform.testudosrl.dev
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: heyform
                port:
                  number: 80
