k8s/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongo-from-heyform-only
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mongo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: heyform
      ports:
        - protocol: TCP
          port: 27017
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: keydb-from-heyform-only
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: keydb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: heyform
      ports:
        - protocol: TCP
          port: 6379
